overflow corrected

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -2,8 +2,6 @@
   position: relative;
   margin: 35px auto 0;
   width: 300px;
-  height: 534px;
-  overflow: hidden;
 }
 
 #toggle {
